<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndrolircMain!</string>
    <string name="app_name">BuilderRemote</string>
    <string name="vol_up_str">VOL +</string>
    <string name="vol_down_str">VOL -</string>
    <string name="mute">MUTE</string>
    <string name="tvplus">CH+</string>
    <string name="tvminus">CH-</string>
    <string name="power">POWER</string>
 <string name="planet_prompt">Select a device:</string>
  <string name="select">Select a device:</string>
  

</resources>
