<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"

  android:layout_width="fill_parent"

  android:layout_height="fill_parent">
  	

       
  

<TableLayout android:id="@+id/TableLayout01" android:layout_alignParentTop="true" android:layout_width="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" android:stretchColumns="0,1,2" android:layout_height="wrap_content" android:background="@drawable/apple_bg">

<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">

    <Button
        android:id="@+id/apple_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:drawableTop="@drawable/stop"
        android:text="@string/power" />

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mute" android:id="@+id/apple_menu" android:layout_weight="50" android:drawableTop="@drawable/speaker_off"/>

</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">

    <Button
        android:id="@+id/apple_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:drawableTop="@drawable/tv_plus"
        android:text="@string/tvplus" />

</TableRow>

<RelativeLayout
    android:id="@+id/InnerRelativeLayout"
    android:layout_alignParentBottom="true" >

    <Spinner
        android:id="@+id/Spinner02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

    </Spinner>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Spinner01"
        android:layout_marginTop="10dip"
        android:text="@string/planet_prompt" />

    <Button
        android:id="@+id/apple_volup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_weight="50"
        android:drawableTop="@drawable/speaker_plus"
        android:text="@string/vol_up_str" />

    <Button
        android:id="@+id/apple_voldn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_weight="50"
        android:drawableTop="@drawable/speaker_minus"
        android:text="@string/vol_down_str" />

    <Button
        android:id="@+id/apple_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_weight="50"
        android:drawableTop="@drawable/tv_minus"
        android:text="@string/tvminus" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Spinner02"
        android:layout_alignParentLeft="true"
        android:prompt="@string/select" />

</RelativeLayout>

</TableLayout>

</RelativeLayout>